--- a/app/globals.css
+++ b/app/globals.css
@@ -10,20 +10,12 @@ body {
   @apply bg-slate-900 text-gray-300;
 }
 
-@keyframes pulse-in-light {
+@keyframes pulse {
   50% {
-    color: #1d2a8b;
+    color: #6366f1;
   }
 }
 
-@keyframes pulse-in-dark {
-  50% {
-    color: #5f6feb;
-  }
-}
 #animate-puls-text {
-  animation: pulse-in-light 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-.dark #animate-puls-text {
-  animation: pulse-in-dark 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  animation: pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
